tests/ui/parser/invalid_mapping_key_type1.stderr
error: expected `=>`, found `[`
  --> ROOT/tests/ui/parser/invalid_mapping_key_type1.sol:LL:CC
   |
LL |     mapping(uint[] => uint) m2;
   |                 ^ expected `=>`

error: aborting due to 1 previous error

